Deforming motion blurred point clouds do not render in Cycles HIP-RT when BVH timesteps != 0 #127131

Closed
opened 2024-09-04 08:34:23 +02:00 by Alaska · 3 comments
Member

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: AMD Radeon RX 7800 XT ATI Technologies Inc. 4.6.0 Core Profile Context 24.7.1.240711

Blender Version
Broken version: 4.3.0 Alpha, branch: main, commit date: 2024-09-03 20:56, hash: 0ef35bc47598
Worked: 4.2 as point clouds always crashed Blender with HIP-RT until 8cf4d47fe2

Short description of error
In 8cf4d47fe2 I noted that deformable motion blurred point cloud objects do not render when the BVH timesteps != 0. I am creating this report just so that issue can be tracked. Here are some images to demonstrate the issue

CPU HIP BVH2 HIP-RT
CPU.jpg HIP.jpg HIP-RT.jpg

Exact steps for others to reproduce the error

  1. Change the render engine to Cycles and enable Motion blur.
  2. Create a scene with a deforming point cloud object.
  3. In Render Properties -> Performance -> Acceleration Structure increase BVH Time steps to something higher than 0.
  4. Render the scene with HIP-RT and compare the results to other backends/BVHs.

Here is a file with steps 1-3 done for you. HIP-RT Motion blurred points.blend

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: AMD Radeon RX 7800 XT ATI Technologies Inc. 4.6.0 Core Profile Context 24.7.1.240711 **Blender Version** Broken version: 4.3.0 Alpha, branch: main, commit date: 2024-09-03 20:56, hash: `0ef35bc47598` Worked: 4.2 as point clouds always crashed Blender with HIP-RT until 8cf4d47fe2d1e2449cfd129ef9cbe619cf7a901d **Short description of error** In 8cf4d47fe2d1e2449cfd129ef9cbe619cf7a901d I noted that deformable motion blurred point cloud objects do not render when the BVH timesteps != 0. I am creating this report just so that issue can be tracked. Here are some images to demonstrate the issue |CPU|HIP BVH2|HIP-RT| |-|-|-| |![CPU.jpg](/attachments/a4e50a95-41e3-493e-974d-eab074c623ca)|![HIP.jpg](/attachments/ad177ed0-3701-4c35-a817-ff42c45011da)|![HIP-RT.jpg](/attachments/a9d79219-8519-49e5-a465-f871b3e976be)| **Exact steps for others to reproduce the error** 1. Change the render engine to Cycles and enable Motion blur. 2. Create a scene with a deforming point cloud object. 3. In `Render Properties -> Performance -> Acceleration Structure` increase `BVH Time steps` to something higher than 0. 4. Render the scene with HIP-RT and compare the results to other backends/BVHs. Here is a file with steps 1-3 done for you. [HIP-RT Motion blurred points.blend](/attachments/1c6c1318-2af6-4491-b498-c197aa6bb7bf)
Alaska added the
Status
Needs Triage
Severity
Normal
Type
Bug
labels 2024-09-04 08:34:24 +02:00
Author
Member

Just for the record, curves seem to have the same issue, but that is currently being tracked in #125086.

I believe they might be the same issue, but haven't verified it, so I'm keeping them seperate for now.

Just for the record, curves seem to have the same issue, but that is currently being tracked in #125086. I believe they might be the same issue, but haven't verified it, so I'm keeping them seperate for now.
Member
cc @salipour
Pratik Borhade added
Module
Render & Cycles
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-09-04 10:30:46 +02:00
Member

I think I know what the problem is. I'll try to submit a fix by early next week.

I think I know what the problem is. I'll try to submit a fix by early next week.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-06 12:27:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#127131
No description provided.