intern/cycles/kernel/device/hiprt/common.h
@@ -225,7 +225,7 @@ ccl_device_inline bool motion_triangle_custom_local_intersect(const hiprtRay &ra
                                                               void *payload,
                                                               hiprtHit &hit)
 {
-#  ifdef MOTION_BLUR
+#  ifdef __OBJECT_MOTION__
   LocalPayload *local_payload = (LocalPayload *)payload;
   KernelGlobals kg = local_payload->kg;
   int object_id = local_payload->local_object;
@@ -268,8 +268,7 @@ ccl_device_inline bool motion_triangle_custom_volume_intersect(const hiprtRay &r
                                                                void *payload,
                                                                hiprtHit &hit)
 {
-#  ifdef MOTION_BLUR
-
+#  ifdef __OBJECT_MOTION__
   RayPayload *local_payload = (RayPayload *)payload;
   KernelGlobals kg = local_payload->kg;
   int object_id = kernel_data_fetch(user_instance_id, hit.instanceID);
@@ -345,7 +344,7 @@ ccl_device_inline bool point_custom_intersect(const hiprtRay &ray,
 
   float ray_time = local_payload->ray_time;
 
-  if ((type & PRIMITIVE_MOTION) && kernel_data.bvh.use_bvh_steps) {
+  if ((type & PRIMITIVE_MOTION_POINT) && kernel_data.bvh.use_bvh_steps) {
 
     int time_offset = kernel_data_fetch(prim_time_offset, object_id);
     float2 prims_time = kernel_data_fetch(prims_time, hit.primID + time_offset);
